bug 333270: Investigate moving build to Tycho Added necessary stuff to get tests working better (target platform creation before test execution)